test/tests/stages/8_loops/invalid_semantics/extra_credit/duplicate_default_in_nested_statement.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[61]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(10)
  ;
  switch
  (
  identifier(a)
  )
  {
  case
  const int(1)
  :
  for
  (
  int
  identifier(i)
  =
  const int(0)
  ;
  identifier(i)
  <
  const int(10)
  ;
  identifier(i)
  =
  identifier(i)
  +
  const int(1)
  )
  {
  continue
  ;
  while
  (
  const int(1)
  )
  default
  :
  ;
  }
  case
  const int(2)
  :
  return
  const int(0)
  ;
  default
  :
  ;
  }
  return
  const int(0)
  ;
  }
